--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -21,6 +21,14 @@
       "sfid": "TFM_ATTEST_GET_TOKEN_SFID",
       "signal": "TFM_ATTEST_GET_TOKEN",
       "tfm_symbol": "initial_attest_get_token",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_ATTEST_GET_TOKEN_SIZE_SFID",
+      "signal": "TFM_ATTEST_GET_TOKEN_SIZE",
+      "tfm_symbol": "initial_attest_get_token_size",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
