Attest: Stub implementation of missing crypto APIs
Initial attestation service interact with crypto
service to:
 - hash data
 - import key
 - sign data

Some of the necessary API implementation are missing.
This patch is just intended to use temporarily until
the requested features are made available in the
crypto service.

Change-Id: I6291ced1cac836ad114193acbf09be70cf9d2bb4
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -35,7 +35,8 @@
     }
   ],
   "source_files": [
-    "attestation_core.c"
+    "attestation_core.c",
+    "attestation_crypto_stub.c",
   ],
   "tfm_linker_pattern": [
     "library_list": [
