Attest: Add CBOR/COSE encoding to IAT
Replace the temporary TLV encoding of the initial
attestation token (IAT) to the final CBOR/COSE encoding.

Change-Id: I4b6c936e501704fd193757e47ccbde657e85ede6
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -38,6 +38,8 @@
     "attestation_core.c",
     "attestation_crypto_stub.c",
     "attestation_key.c",
+    "attest_token.c",
+
   ],
   "tfm_linker_pattern": [
     "library_list": [
