Test: Add positive test suite to IPC build config
This patch adds support for positive core test suite under IPC mode.
Auto signal generation still not implemented that's why
tfm_ss_core_test*_signal.h files are created manually.

Details:
 * enable CORE_TEST in ConfigCoreIPC.cmake
 * implement secure function calls using the PSA API in test services
   and in the test suite
 * define signals for test services
 * update partition manifest files for test services to enumerate the
   available secure functions

Change-Id: I7cbb0acaabbed7cd44650c6a2f9ff3c632e05500
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -21,7 +21,7 @@ embedded_project_fixup()
 set(APP_DIR ${CMAKE_CURRENT_LIST_DIR})
 get_filename_component(TFM_ROOT_DIR ${APP_DIR}/.. ABSOLUTE)
 set(INTERFACE_DIR ${TFM_ROOT_DIR}/interface)
-set(TEST_INTERFACE_DIR ${TFM_ROOT_DIR}/test/interface)
+set(TEST_DIR ${TFM_ROOT_DIR}/test)
 
 #Include BL2 bootloader related functions
 set(MCUBOOT_DIR "${TFM_ROOT_DIR}/bl2/ext/mcuboot")
