--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -11,6 +11,7 @@
   "priority": "NORMAL",
   "id": "0x00000002",
   "entry_point": "core_test_init",
+  "tfm_partition_ipc": true,
   "stack_size": "0x0400",
   "heap_size": "0x0400",
   "mmio_regions": [
@@ -52,5 +53,111 @@
     "object_list": [
       "*tfm_ss_core_test.*"
     ]
-  }
+  },
+  "services": [
+    {
+      "name": "SPM_CORE_TEST_INIT_SUCCESS_SID",
+      "sid": "0x00002100",
+      "signal": "SPM_CORE_TEST_INIT_SUCCESS_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_DIRECT_RECURSION_SID",
+      "sid": "0x00002101",
+      "signal": "SPM_CORE_TEST_DIRECT_RECURSION_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_MPU_ACCESS_SID",
+      "sid": "0x00002102",
+      "signal": "SPM_CORE_TEST_MPU_ACCESS_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SID",
+      "sid": "0x00002103",
+      "signal": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_SHARE_REDIRECTION_SID",
+      "sid": "0x00002104",
+      "signal": "SPM_CORE_TEST_SHARE_REDIRECTION_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_SS_TO_SS_SID",
+      "sid": "0x00002105",
+      "signal": "SPM_CORE_TEST_SS_TO_SS_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SID",
+      "sid": "0x00002106",
+      "signal": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_OUTVEC_WRITE_SID",
+      "sid": "0x00002107",
+      "signal": "SPM_CORE_TEST_OUTVEC_WRITE_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SID",
+      "sid": "0x00002108",
+      "signal": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SID",
+      "sid": "0x00002109",
+      "signal": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_SPM_REQUEST_SID",
+      "sid": "0x0000210A",
+      "signal": "SPM_CORE_TEST_SPM_REQUEST_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_BLOCK_SID",
+      "sid": "0x0000210B",
+      "signal": "SPM_CORE_TEST_BLOCK_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    },
+    {
+      "name": "SPM_CORE_TEST_NS_THREAD_SID",
+      "sid": "0x0000210C",
+      "signal": "SPM_CORE_TEST_NS_THREAD_SIGNAL",
+      "non_secure_clients": "true",
+      "minor_version": 1,
+      "minor_policy": "STRICT"
+    }
+  ]
 }
