--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -7,7 +7,7 @@
 
 {
   "name": "TFM_SP_IPC_SERVICE_TEST",
-  "type": "APPLICATION-ROT",
+  "type": "PSA-ROT",
   "priority": "HIGH",
   "id": "0x00000007",
   "entry_point": "ipc_service_test_main",
