Attest: Decouple attestation from TF-M SPM
Introduce an abstraction layer around the
TF-M SPM specific API calls to make it portable
with other SPM implementations.

Change-Id: I63596efd36674e3c85ab39ff0d2d6f9a8c9f444e
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -39,7 +39,7 @@
     "attestation_crypto_stub.c",
     "attestation_key.c",
     "attest_token.c",
-
+    "tfm_attestation.c",
   ],
   "tfm_linker_pattern": [
     "library_list": [
