Core: Add IRQ handling for PSA API
Add privileged IRQ handlers that set IRQ signal for the partition. Also
implement the missing checks and IRQ management in tfm_svcall_psa_eoi.

Change-Id: Ia0ab46085bf4098d6abfda31ee916d4329cdb9a0
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -51,5 +51,10 @@
         "short_name": "tfm_secure_irq_handlers",
         "output": "secure_fw/core/tfm_secure_irq_handlers.inc"
     },
+    {
+        "name": "Secure IRQ handlers for PSA API",
+        "short_name": "tfm_secure_irq_handlers_ipc",
+        "output": "secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc"
+    },
   ]
 }
