Platform: Add secure part section tag for data
This patch adds secure partition section tags. Those tags can be used
to place data, which is not located in the service folder, in the
secure partition area.

Change-Id: I6868376aed8e53f125d305600a82e6395f3dede4
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -373,6 +373,7 @@ SECTIONS
         {{pattern}}(.data*)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
         . = ALIGN(32);
     } > RAM AT> FLASH
     Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
@@ -393,6 +394,7 @@ SECTIONS
         {{pattern}}(COMMON)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_ZI)
         . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
@@ -451,6 +453,7 @@ SECTIONS
         {{pattern}}(.data*)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
         . = ALIGN(32);
     } > RAM AT> FLASH
     Image$${{manifest.manifest.name}}_DATA$$RW$$Base = ADDR(.{{manifest.manifest.name}}_DATA);
@@ -471,6 +474,7 @@ SECTIONS
         {{pattern}}(COMMON)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_ZI)
         . += (. - start_of_{{manifest.manifest.name}}) ? 0 : 4;
         . = ALIGN(32);
     } > RAM AT> RAM
