--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -182,6 +182,8 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
+        *({{manifest.manifest.name}}_ATTR_ZI)
     }
 
     {% if manifest.attr.tfm_partition_ipc %}
@@ -235,6 +237,8 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
+        *({{manifest.manifest.name}}_ATTR_RW)
+        *({{manifest.manifest.name}}_ATTR_ZI)
     }
 
     {% if manifest.attr.tfm_partition_ipc %}
