COSE: Add porting layer to psa_crypto
t_cose exposes an API to bind it to arbitrary crypto
library. This change ports t_cose to psa_crypto library.

Change-Id: If59067ee0de02221bb36a5e45c442fe37cd54c68
Signed-off-by: Tamas Ban <tamas.ban@arm.com>
Co-Authored-By: Laurence Lundblade <lgl@securitytheory.com>

--- a/lib/t_cose/CMakeLists.txt
+++ b/lib/t_cose/CMakeLists.txt
@@ -25,6 +25,7 @@ set(T_COSE_DIR "${CMAKE_CURRENT_LIST_DIR}")
 list(APPEND ALL_SRC_C
 	"${T_COSE_DIR}/src/t_cose_sign1_sign.c"
 	"${T_COSE_DIR}/src/t_cose_util.c"
+	"${T_COSE_DIR}/src/t_cose_psa_crypto.c"
 	)
 
 #Setting include directories
