Test: Enable CoreTest config on Muscas and AN524
Add abstraction for platform features that are used by the core tests.
This makes possible that platforms that do not support certain platform
features can mock the platform behaviour.

Detailed changes:
 * Enable Core tests in MUSCA_A, MUSCA_B1 and AN524 platforms
 * Add tfm_plat_test.h enumerating the test interface expected from
   platform implementations by the Core Tests
 * Move platform features used by Core tests to the platform directory
   on MPS2 platforms
 * Mock platform features used by Core tests in the platform directory
   on MUSCA_A, MUSCA_B1 and AN524 platforms
 * Link MT25QL device driver structure to TFM_SP_STORAGE partition so
   that SST init can run in isolation level 3

Change-Id: I7385f34e364b8be330cf214b8f148affaa76613d
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -45,6 +45,7 @@ set(BUILD_CMSIS_DRIVERS On)
 set(BUILD_TIME Off)
 set(BUILD_UART_STDOUT On)
 set(BUILD_FLASH On)
+set(BUILD_PLAT_TEST Off)
 if(NOT DEFINED PLATFORM_CMAKE_FILE)
 	message (FATAL_ERROR "Platform specific CMake is not defined. Please set PLATFORM_CMAKE_FILE.")
 elseif(NOT EXISTS ${PLATFORM_CMAKE_FILE})
