--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -66,6 +66,7 @@ set(BUILD_UART_STDOUT On)
 set(BUILD_FLASH On)
 set(BUILD_BOOT_SEED On)
 set(BUILD_DEVICE_ID On)
+set(BUILD_PLAT_TEST Off)
 if(NOT DEFINED PLATFORM_CMAKE_FILE)
 	message (FATAL_ERROR "Platform specific CMake is not defined. Please set PLATFORM_CMAKE_FILE.")
 elseif(NOT EXISTS ${PLATFORM_CMAKE_FILE})
