Attest: Add test that verify and decode individual claims
This consists of three sub-parts: 1) an implementation
of COSE signature verifcation, 2) an implementaiton of
token decoding, 3) test that do comparison to expected
values.

Change-Id: I37dfebf97a4658741ff0721a5b769781b2634ea7
Signed-off-by: Laurence Lundblade <lgl@securitytheory.com>
Co-authored-by: Tamas Ban <tamas.ban@arm.com>

--- a/lib/t_cose/CMakeLists.txt
+++ b/lib/t_cose/CMakeLists.txt
@@ -31,6 +31,7 @@ list(APPEND ALL_SRC_C_SIGN
 	)
 
 list(APPEND ALL_SRC_C_VERIFY
+	"${T_COSE_DIR}/src/t_cose_sign1_verify.c"
 	"${T_COSE_DIR}/src/t_cose_util.c"
 	"${T_COSE_DIR}/src/t_cose_psa_crypto_hash.c"
 	"${T_COSE_DIR}/src/t_cose_psa_crypto_verify.c"
