Platform: Add timer to the platform test interface
Add timer to the platform test interface so that it can be used from
the IRQ tests as an interrupt source.

Detailed changes:
 * Add timer_cmsdk driver files to unpriv code
 * Align the timer interrupt handler names in the startup assemblies
   accross platforms
 * Add timer handling function declarations in tfm_plat_test.h and
   implement them in the platform directories
 * Create platform data for timer0 in tfm_peripherals_def.h
 * Add option to configure timer0 as secure peripheral in PPC
 * Fix MUSCA_A and MUSCA_B1 cmake files for building timer driver

Change-Id: I04757d2a961e044218c78aa09b754aaf82ac8a35
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -87,7 +87,7 @@ endif()
 set(BUILD_CMSIS_CORE On)
 set(BUILD_RETARGET On)
 set(BUILD_NATIVE_DRIVERS On)
-set(BUILD_TIME Off)
+set(BUILD_TIME On)
 set(BUILD_STARTUP On)
 set(BUILD_TARGET_CFG Off)
 set(BUILD_TARGET_HARDWARE_KEYS Off)
@@ -97,7 +97,13 @@ set(BUILD_UART_STDOUT Off)
 set(BUILD_FLASH Off)
 set(BUILD_BOOT_SEED Off)
 set(BUILD_DEVICE_ID Off)
-set(BUILD_PLAT_TEST Off)
+if(CORE_TEST_POSITIVE)
+	set(BUILD_PLAT_TEST On)
+	set(BUILD_TIME On)
+else()
+	set(BUILD_PLAT_TEST Off)
+	set(BUILD_TIME Off)
+endif()
 if(NOT DEFINED PLATFORM_CMAKE_FILE)
 	message (FATAL_ERROR "Platform specific CMake is not defined. Please set PLATFORM_CMAKE_FILE.")
 elseif(NOT EXISTS ${PLATFORM_CMAKE_FILE})
