Test: Add testcases for IRQ handling
This patch contains a test cases exercising the secure IRQ handling
feature of TF-M.

Details of the change:
 * Add documentation on the tests
 * Create new service which handles timer0 interrupts
 * Link timer0 driver structures to IRQ test service
 * Implement the testcases in the positive test suite, the new IRQ test
   service and in TFM_SP_CORE_TEST_2

Change-Id: If7e3d1b57eac4de9ff6e01f0b04efd04bc443545
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -46,9 +46,11 @@ endif()
 if (CORE_TEST_INTERACTIVE OR CORE_TEST_POSITIVE)
 	set(ENABLE_CORE_TESTS True)
 	set(ENABLE_CORE_TESTS_2 True)
+	set(ENABLE_IRQ_TEST_SERVICES True)
 else()
 	set(ENABLE_CORE_TESTS False)
 	set(ENABLE_CORE_TESTS_2 False)
+	set(ENABLE_IRQ_TEST_SERVICES False)
 endif()
 
 set(ENABLE_SECURE_STORAGE_SERVICE_TESTS TRUE)
